# markdown-checker

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
docs/: architecture.md  claude-web-research-preview-notes.md  design.md  plan.md  prd.md  process.md  status.md
scripts/: build.sh
src/: cli.rs  file_ops.rs  fixer.rs  lib.rs  main.rs  reporter.rs
src/validators/: ascii.rs  mod.rs  tree_symbols.rs  unprintable.rs
tests/: integration_tests.rs
tests/fixtures/: example_output.md  non_ascii.md  tree_chars.md  valid.md
wiki/: Architecture.md  Auto-Fix-System.md  CLI-Interface.md  Components.md  Development-Process.md  File-Operations.md  Home.md  Reporter-Module.md  Testing-Strategy.md  Validation-Engine.md  Workflows.md
