[package]
name = "readme-checker"
version = "0.1.0"
edition = "2021"
authors = ["Michael A Wright"]
description = "CLI tool for validating markdown files for UTF-8, ASCII-subset, and unprintable characters"
license = "MIT"
repository = "https://github.com/softwarewrighter/readme-checker"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
