[package]
name = "markdown-checker"
version = "0.1.1"
edition = "2024"
authors = ["Michael A Wright"]
description = "CLI tool for validating markdown files for UTF-8, ASCII-subset, and unprintable characters"
license = "MIT"
repository = "https://github.com/softwarewrighter/markdown-checker"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
sw-cli = { path = "lib/sw-cli" }

[build-dependencies]
sw-cli = { path = "lib/sw-cli" }

[dev-dependencies]
tempfile = "3.8"
